--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,13 @@
     {% else %}
         <link rel="stylesheet" href="{% static 'css/style.min.css' %}" />
     {% endif %}
-    <title>Document</title>
+    <title>
+        {% block head_title %}
+        {% endblock head_title %}
+    </title>
 </head>
 <body>
-    
+    {% block content %}
+    {% endblock content %}
 </body>
 </html>
