--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if debug %}
-        <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    {% else %}
-        <link rel="stylesheet" href="{% static 'css/style.min.css' %}" />
-    {% endif %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>
         {% block head_title %}
         {% endblock head_title %}
@@ -17,5 +13,8 @@
 <body>
     {% block content %}
     {% endblock content %}
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    {% block extra_js %}{% endblock extra_js %}
 </body>
 </html>
