--- a/templates/home.html
+++ b/templates/home.html
@@ -107,6 +107,29 @@
     
         deleteForm.action = url
       })
+    
+      // SweetAlert2 for success and error messages
+      const urlParams = new URLSearchParams(window.location.search)
+      const success = urlParams.get('success')
+      const error = urlParams.get('error')
+    
+      if (success === 'true') {
+        Swal.fire({
+          icon: 'success',
+          title: 'Success!',
+          text: 'The operation was successful.',
+          showConfirmButton: false,
+          timer: 1500
+        })
+      } else if (error === 'true') {
+        Swal.fire({
+          icon: 'error',
+          title: 'Oops...',
+          text: 'Something went wrong. Please try again.',
+          showConfirmButton: false,
+          timer: 1500
+        })
+      }
     })
   </script>
 {% endblock %}
